fix/pic size, spacings, btn color

--- a/themes/podcast/assets/scss/main.scss
+++ b/themes/podcast/assets/scss/main.scss
@@ -23,8 +23,11 @@ h3 {
       grid-template-columns: 25% 75%;
       grid-template-rows: 1fr;
     }
+    @media (min-width: 1200px) {
+      grid-template-columns: 21rem 3fr;
+    }
     @media (min-width: 1400px) {
-      grid-template-columns: 20rem 3fr;
+      grid-template-columns: 23rem 3fr;
     }
 
     .sidebar {
@@ -37,6 +40,9 @@ h3 {
       }
       @media (min-width: 1024px) {
         min-height: 100vh;
+      }
+      @media (min-width: 1200px) {
+        padding: 0;
       }
 
       &__static {
@@ -59,16 +65,12 @@ h3 {
           align-items: center;
         }
         @media (min-width: 1200px) {
-          position: fixed;
-          width: 25%;
-          height: 20rem;
-          display: flex;
-          flex-direction: column;
-          justify-content: flex-start;
-          align-items: center;
+          width: 21rem;
+          height: 30rem;
+          padding: 0;
         }
         @media (min-width: 1400px) {
-          width: 20rem;
+          width: 23rem;
         }
 
         &__img {
@@ -81,6 +83,13 @@ h3 {
           @media (min-width: 1024px) {
             width: 100%;
           }
+          @media (min-width: 1200px) {
+            width: 21rem;
+            padding: 3rem 3rem 0;
+          }
+          @media(min-width: 1400px) {
+            width: 23rem;
+          }
 
           img {
             max-height: 100%;
@@ -88,8 +97,9 @@ h3 {
               max-height: 100%;
             }
             @media (min-width: 1024px) {
-              max-width: 50%;
-              margin-bottom: 24px;
+              width: 50%;
+              margin-bottom: 1.5rem;
+              max-width: 120px;
             }
           }
         }
@@ -106,17 +116,23 @@ h3 {
             align-self: center;
           }
           @media(min-width: 1024px) {
-            flex-direction: row;
-            flex-wrap: wrap;
-            align-self: center;
             padding-right: 3rem;
             height: 100%;
+          }
+          @media(min-width: 1200px) {
+            display: block;
+            height: 30rem;
+            width: 21rem;
+            padding: 0 3rem 3rem;
+          }
+          @media(min-width: 1400px) {
+            width: 23rem;
           }
 
           h1 {
             font-size: 22px;
             @media(min-width: 1200px) {
-              font-size: 2.5rem;
+              font-size: 2rem;
               margin-bottom: 8px;
             }
           }
@@ -131,10 +147,9 @@ h3 {
               margin-bottom: 1rem;
             }
             @media(min-width: 1200px) {
-              line-height: 33px;
-              font-size: 22px;
+              line-height: 30px;
+              font-size: 18px;
             }
-
           }
 
           .btn {
@@ -143,7 +158,7 @@ h3 {
               width: 46%;
               margin: 0;
               margin-right: 8px;
-              margin-top: 24px;
+              margin-top: 1.5rem;
             }
             @media (min-width: 1024px) {
               width: 100%;
@@ -155,16 +170,24 @@ h3 {
             }
           }
 
+          .apple {
+            background: black;
+            border: black;
+          }
 
+          .spotify {
+            background: #1DB954;
+            border: #1DB954;
+            color: black;
+            font-weight: bold;
+          }
         }
       }
     }
 
     .episodes {
-
       padding: 1.5rem;
       width: 100%;
-
       @media(min-width: 1200px) {
         width: 80%;
       }
@@ -174,14 +197,12 @@ h3 {
       }
 
       .bold-small {
-
         font-weight: bold;
         font-size: 1em;
         text-transform: uppercase;
         color: #79869E;
         margin-bottom: 16px;
       }
-
 
       .episode {
         background: #fff;
